Changelog
=========

2.0b3 - Unreleased
------------------

* Update chameleon compatibility to the new 2.x branch.
  [rossp]

* Optimize and improve performancde.
  [rossp]

* Various upstream template updates.
  [rossp, topherh]

* Add remote URL support to folder_summary_view.
  [topherh]

* Fix an issue with the permission protecting the Export action.
  [rossp]

* Handle catalog index ParseErrors gracefully.  Thanks to Larry
  Pitcher for the report.
  [rossp]

2.0b2 - 2011-01-13
------------------

* Retrofit some Plone 3 compatibility.  Plone 3 is un-supported in
  version 2+.  The tests pass but the UI hasn't been checked so YMMV.
  [rossp]

2.0b1 - 2011-01-11
------------------

* Added a rudimentary UI for managing collection columns.
  [rossp]

2.0a4 - 2011-01-11
------------------

* Restore the workflow menu which was missing from the topic
  folder_contents view.  Thanks to Larry Pitcher for the report.
  [rossp] 

2.0a3 - 2011-01-10
------------------

* Change the permission for the grouped listing view so that anonymous
  visitors can access the view when the content is published.
  Thanks to Larry Pitcher for the report.
  [rossp] 

* Add support for columns that don't have corresponding catalog
  metadata.  Be aware that using such columns can greatly affect
  performance as export requires looking up every object to retrieve
  the data.
  [rossp]

2.0a2 - 2010-11-23
------------------

* Fixed a problem with a faulty type assumption regarding
  DateTimeFields in the FormDateCriterion.  The FormDateCriterion
  doesn't actually used a DateTimeField.
  [rossp]

* Refactor the <form> and <button> based batch_macros so as to not
  conflict with other uses of the full "navigation" macro within an
  existing form resulting in nested <form>s.
  [rossp]

2.0a1 - 2010-11-21
------------------

* Ensure that the "default" profile is used by portal_quickinstaller
  by... well, default.  :-)
  [rossp]
